--- a/css/css-contact/style.css
+++ b/css/css-contact/style.css
@@ -1,6 +1,5 @@
 body{
     font-family: sans-serif;
-    color: #ffffff;
     padding: 0;
     margin: 0;
 }
@@ -28,5 +27,104 @@ h3, ul li a{
     cursor: pointer;
 }
 .contact{
-    background: blue;
+    color: blue;
+}
+
+
+.form{
+    border-radius: 15px;
+    padding: 20px;
+    background: rgb(224, 224, 224);
+    text-align: center;
+    width: 40%;
+    margin: 50px auto;
+    cursor: pointer;
+}
+input{
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    padding: 10px;
+    width: 98%;
+    box-sizing: border-box;
+}
+h3, input{
+    margin: 5px;
+}
+.two{
+    display: flex;
+    justify-content: space-between;
+}
+.two input{
+    width: 48%;
+    box-sizing: border-box;
+}
+input[type="submit"], input[type="reset"]{
+    border-radius: 50%;
+    box-shadow: 5px 5px 5px rgb(128, 128, 243);
+}
+input[type="submit"]{
+    box-shadow: 5px 5px 5px rgb(247, 211, 146);
+}
+input[type="submit"]{
+    background: rgb(128, 128, 250);
+}
+input[type="reset"]{
+    background: orange;
+}
+
+
+.map{
+    width: 70%;
+    margin: auto;
+}
+iframe{
+    width: 100%;
+    height: 300px;
+    border-radius: 25px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+    background-image: url('../../pictures/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    color: #fff;
+    margin-top: 50px;
+}
+.foot_container{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px 0 20px;
+}
+.footer_icon ul{
+    display: flex;
+    justify-content: center;
+}
+.footer_icon ul li{
+    list-style-type: none;
+}
+.footer_icon ul li a i{
+    font-size: 40px;
+    padding: 0 0 30px 0;
+}
+.footer-nav ul{
+    text-align: center;
+    padding-bottom: 10px;
 }
