--- a/css/css-project/style.css
+++ b/css/css-project/style.css
@@ -36,23 +36,35 @@ h3, ul li a{
 
 
 .container{
-    padding: 20px;
+    width: 60%;
+    margin: auto;
+    padding: 50px 0 30px 0;
 }
 .item{
-    height: 20vh;
-    margin-bottom: 10px;
+    height: 35vh;
+    margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
 }
 .head{
-    width: 20%;
-    background: gray;
-    border-radius: 15px;
-
+    width: 35%;
+}
+.head img{
+    width: 100%;
+    height: 100%;
+    border-radius: 0 15px 15px 0;
 }
 .body{
-    width: 75%;
-    background: aqua;
+    width: 55%;
+    background: rgba(128, 128, 128, 0.061);
+    border-radius: 15px 0 0 15px;
+    border-bottom: 1px solid black;
+    color: #000;
+    padding: 10px;
+}
+.body h3{
+    color: #000;
+    border-bottom: 1px solid black;
 }
 
 
@@ -91,7 +103,6 @@ footer{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     color: #fff;
-    margin-top: 50px;
 }
 .foot_container{
     display: flex;
