--- a/css/css-contact/style.css
+++ b/css/css-contact/style.css
@@ -1,4 +1,4 @@
-body{
+*{
     font-family: sans-serif;
     padding: 0;
     margin: 0;
@@ -11,7 +11,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     font-size: 28px;
-    padding: 0;
+    padding: 10px;
 }
 nav ul{
     display: flex;
@@ -26,7 +26,7 @@ h3, ul li a{
     margin: 0;
     cursor: pointer;
 }
-.contact{
+.contact , .bottom-nav .contact{
     color: blue;
 }
 
@@ -37,7 +37,8 @@ form h3{
 .form{
     border-radius: 15px;
     padding: 20px;
-    background: rgb(224, 224, 224);
+    background: rgba(224, 224, 224, 0.205);
+    box-shadow: 0px 5px 5px 5px gray;
     text-align: center;
     width: 40%;
     margin: 50px auto;
@@ -51,7 +52,7 @@ input{
     width: 98%;
     box-sizing: border-box;
 }
-h3, input{
+form h3, input{
     margin: 5px;
 }
 .two{
@@ -68,8 +69,6 @@ input[type="submit"], input[type="reset"]{
 }
 input[type="submit"]{
     box-shadow: 5px 5px 5px rgb(247, 211, 146);
-}
-input[type="submit"]{
     background: rgb(128, 128, 250);
 }
 input[type="reset"]{
@@ -85,6 +84,7 @@ iframe{
     width: 100%;
     height: 300px;
     border-radius: 25px;
+    margin-bottom: 50px;
 }
 
 
@@ -103,19 +103,39 @@ iframe{
 
 
 
-
+.bottom-nav{
+    width: 40%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 15px 15px 0 0;
+    border: none;
+    outline: none;
+    background: rgba(128, 128, 128, 0.246);
+    box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.26);
+}
+.bottom-nav ul{
+    display: flex;
+    font-size: 20px;
+}
+.bottom-nav ul li a{
+    color: #000;
+}
 footer{
     background-image: url('../../pictures/bg.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    color: #fff;
-    margin-top: 50px;
+    color: rgba(255, 255, 255, 0.801);
+    padding: 20px 20px 30px 20px;
 }
 .foot_container{
     display: flex;
     justify-content: space-between;
-    padding: 20px 20px 0 20px;
 }
+.right p{
+    text-align: right;
+}
+
+
 .footer_icon ul{
     display: flex;
     justify-content: center;
@@ -124,10 +144,5 @@ footer{
     list-style-type: none;
 }
 .footer_icon ul li a i{
-    font-size: 40px;
-    padding: 0 0 30px 0;
-}
-.footer-nav ul{
-    text-align: center;
-    padding-bottom: 10px;
+    font-size: 30px;
 }
