--- a/css/css-project/style.css
+++ b/css/css-project/style.css
@@ -1,6 +1,5 @@
-body{
+*{
     font-family: sans-serif;
-    color: #ffffff;
     padding: 0;
     margin: 0;
 }
@@ -12,7 +11,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     font-size: 28px;
-    padding: 0;
+    padding: 10px;
 }
 nav ul{
     display: flex;
@@ -27,7 +26,7 @@ h3, ul li a{
     margin: 0;
     cursor: pointer;
 }
-.project{
+.project, .bottom-nav .project{
     color: blue;
 }
 
@@ -60,12 +59,16 @@ h3, ul li a{
     border-radius: 15px 0 0 15px;
     border-bottom: 1px solid black;
     color: #000;
-    padding: 10px;
+    padding: 30px;
 }
 .body h3{
+    padding: 0;
     color: #000;
     border-bottom: 1px solid black;
 }
+.body p{
+    padding-top: 20px;
+}
 
 
 
@@ -98,17 +101,39 @@ h3, ul li a{
 
 
 
+.bottom-nav{
+    width: 40%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 15px 15px 0 0;
+    border: none;
+    outline: none;
+    background: rgba(128, 128, 128, 0.246);
+    box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.26);
+}
+.bottom-nav ul{
+    display: flex;
+    font-size: 20px;
+}
+.bottom-nav ul li a{
+    color: #000;
+}
 footer{
     background-image: url('../../pictures/bg.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.801);
+    padding: 20px 20px 30px 20px;
 }
 .foot_container{
     display: flex;
     justify-content: space-between;
-    padding: 20px 20px 0 20px;
 }
+.right p{
+    text-align: right;
+}
+
+
 .footer_icon ul{
     display: flex;
     justify-content: center;
@@ -117,10 +142,5 @@ footer{
     list-style-type: none;
 }
 .footer_icon ul li a i{
-    font-size: 40px;
-    padding: 0 0 30px 0;
-}
-.footer-nav ul{
-    text-align: center;
-    padding-bottom: 10px;
+    font-size: 30px;
 }
