--- a/css/css-resume/style.css
+++ b/css/css-resume/style.css
@@ -1,6 +1,5 @@
-body{
+*{
     font-family: sans-serif;
-    color: #ffffff;
     padding: 0;
     margin: 0;
 }
@@ -12,7 +11,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     font-size: 28px;
-    padding: 0;
+    padding: 10px;
 }
 nav ul{
     display: flex;
@@ -27,8 +26,39 @@ h3, ul li a{
     margin: 0;
     cursor: pointer;
 }
-.resume{
+.resume, .bottom-nav .resume{
     color: blue;
+}
+.cl{
+    width: 80%;
+    margin: 50px auto 30px auto;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+}
+.left-side{
+    width: 30%;
+    border-radius: 0 20px 20px 20px;
+    background: aqua;
+    padding: 20px;
+}
+.right-side{
+    width: 60%;
+    border-radius: 20px 20px 0 20px;
+    background: rgb(236, 149, 149);
+    padding: 20px;
+}
+.br{
+    width: 10%;
+    height: 20px;
+    background: red;
+}
+.cv{
+    width: 80%;
+    margin: 30px auto 50px auto;
+    height: 100vh;
+    background: green;
+    border-radius: 20px;
 }
 
 
@@ -75,18 +105,40 @@ h3, ul li a{
 
 
 
+
+
+.bottom-nav{
+    width: 40%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 15px 15px 0 0;
+    border: none;
+    outline: none;
+    background: rgba(128, 128, 128, 0.246);
+    box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.26);
+}
+.bottom-nav ul{
+    display: flex;
+    font-size: 20px;
+}
+.bottom-nav ul li a{
+    color: #000;
+}
 footer{
     background-image: url('../../pictures/bg.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    color: #fff;
-    margin-top: 50px;
+    color: rgba(255, 255, 255, 0.801);
+    padding: 20px 20px 30px 20px;
 }
 .foot_container{
     display: flex;
     justify-content: space-between;
-    padding: 20px 20px 0 20px;
 }
+.right p{
+    text-align: right;
+}
+
 .footer_icon ul{
     display: flex;
     justify-content: center;
@@ -95,10 +147,5 @@ footer{
     list-style-type: none;
 }
 .footer_icon ul li a i{
-    font-size: 40px;
-    padding: 0 0 30px 0;
-}
-.footer-nav ul{
-    text-align: center;
-    padding-bottom: 10px;
+    font-size: 30px;
 }
