--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,44 @@ ul li{
 }
 h3, ul li a{
     text-decoration: none;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.664);
     padding: 0 15px 0 15px;
     margin: 0;
     cursor: pointer;
 }
+/* home */
+#home-body{
+    background-image: url('../pictures/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.home-container{
+    text-align: center;
+    margin-top: 100px;
+}
+.home-profile img{
+    border-radius: 50%;
+}
+.home-button button{
+    width: 200px;
+    height: 60px;
+    text-align: center;
+    background: #ffffff2a;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 30px;
+}
+.home-button button a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 32px;
+}
+.home-container div h2{
+    color: white;
+}
+
+
 /* resume */
 .resume, .bottom-nav .resume{
     color: blue;
@@ -34,7 +67,6 @@ h3, ul li a{
 .cl{
     width: 80%;
     margin: 50px auto 30px auto;
-    height: 100vh;
     display: flex;
     justify-content: space-between;
     border-radius: 50px 0 0 0;
@@ -48,11 +80,11 @@ h3, ul li a{
     width: 60%;
     border-radius: 50px 0 0 0;
     background: rgba(128, 128, 128, 0.219);
-    padding: 20px;
+    padding: 40px 20px 20px 40px;
     box-shadow: -10px 0px 3px 0px #aaa;
 }
-.re-intro, .re-intro h2{
-    margin-top: 15px;
+#re-intro{
+    margin-top: 40px;
 }
 
 .br{
@@ -60,32 +92,12 @@ h3, ul li a{
     height: 10px;
     background: red;
 }
-.cv{
-    width: 80%;
-    margin: 30px auto 50px auto;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 0 50px 0 0;
-    background: rgba(128, 128, 128, 0.144);
-}
-.cv-right-side{
-    width: 30%;
-    padding: 40px 20px;
-}
-.cv-left-side{
-    width: 60%;
-    border-radius: 0 50px 0 0;
-    background: rgba(128, 128, 128, 0.219);
-    padding: 20px;
-    box-shadow: 10px 0px 3px 0px #aaa;
-}
 .re-profile{
     width: 50%;
     height: 150px;
     margin: auto;
 }
-.re-profile img{
+.re-profile img, .cv-header img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -93,6 +105,65 @@ h3, ul li a{
 .re-profile{
     text-align: center;
 }
+
+.cv{
+    width: 80%;
+    margin: 30px auto 50px auto;
+}
+.cv-header{
+    background: rgba(128, 128, 128, 0.219);
+    height: 150px;
+    text-align: center;
+    border-radius: 15px 15px 0 0;
+    
+}
+.cv-header img{
+    width: 10%;
+}
+.cv-container{
+    margin: 50px auto;
+    border-bottom: 5px double black;
+}
+.cv-col{
+    width: 33%;
+    background: rgba(128, 128, 128, 0.219);
+    margin-top: 15px;
+    padding-top: 20px;
+    border-radius: 15px;
+}
+.cv-col h3{
+    color: rgba(0, 0, 0, 0.589);
+    border-bottom: 1px solid black;
+}
+.cv-col ul, .cv-col p{
+    padding: 20px;
+}
+.cv-col ul li{
+    padding-bottom: 5px;
+    list-style-type: disc;
+}
+.one{
+    display: flex;
+    justify-content: space-between;
+}
+.four{
+    display: flex;
+    justify-content: center;
+}
+.download-button{
+    width: 20%;
+    height: 40px;
+    background: rgba(211, 35, 117, 0.39);
+    text-align: center;
+    margin: 30px auto 50px auto;
+    border-radius: 15%;
+}
+.download-button a{
+    text-decoration: none;
+    font-size: 30px;
+    color:#fff;
+}
+
 
 
 /* project */
@@ -131,7 +202,7 @@ h3, ul li a{
     color: #000;
     border-bottom: 1px solid black;
 }
-.-pro-body p{
+.pro-body p{
     padding-top: 20px;
 }
 
@@ -272,6 +343,10 @@ footer{
 }
 .right p{
     text-align: right;
+    cursor: pointer;
+}
+.left p{
+    cursor: pointer;
 }
 
 .footer_icon ul{
