--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ h3, ul li a{
 #home-body{
     background-image: url('../pictures/bg.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .home-container{
     text-align: center;
@@ -55,8 +56,9 @@ h3, ul li a{
     color: #fff;
     font-size: 32px;
 }
-.home-container div h2{
+.home-container h2{
     color: white;
+    margin-bottom: 30vh;
 }
 
 
@@ -118,7 +120,7 @@ h3, ul li a{
     
 }
 .cv-header img{
-    width: 10%;
+    width: 15%;
 }
 .cv-container{
     margin: 50px auto;
@@ -210,23 +212,20 @@ h3, ul li a{
 .hobbies, .bottom-nav .hobbies{
     color: blue;
 }
-.container{
+.hob-container{
     padding: 50px;
     width: 75%;
     margin: auto;
 }
-.head-container, .body-container{
-    margin: 0 auto;
+.hob-container{
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 1fr;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
 }
-
 .head-pic img{
     width: 100%;
-    height: 25vh;
     border-radius: 0 0 15px 15px;
     cursor: pointer;
 }
@@ -255,13 +254,15 @@ form h3{
 }
 .form{
     border-radius: 15px;
-    padding: 20px;
     background: rgba(224, 224, 224, 0.205);
     box-shadow: 0px 5px 5px 5px gray;
     text-align: center;
     width: 40%;
     margin: 50px auto;
     cursor: pointer;
+}
+form{
+    padding: 20px;
 }
 input{
     border: none;
@@ -285,6 +286,7 @@ form h3, input{
 input[type="submit"], input[type="reset"]{
     border-radius: 50%;
     box-shadow: 5px 5px 5px rgb(128, 128, 243);
+    cursor: pointer;
 }
 input[type="submit"]{
     box-shadow: 5px 5px 5px rgb(247, 211, 146);
@@ -297,7 +299,7 @@ input::placeholder{
     color: black;
 }
 .map{
-    width: 70%;
+    width: 65%;
     margin: auto;
 }
 iframe{
@@ -358,4 +360,198 @@ footer{
 }
 .footer_icon ul li a i{
     font-size: 30px;
+}
+
+
+
+
+@media (min-width: 0px) and (max-width: 576px){
+    /* responsive for resume */
+    .re-profile{
+        width: 85%;
+    }
+    .cv-header img{
+        width: 30%;
+    }
+    .one {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .cv-col{
+        width: 100%;
+    }
+    .download-button{
+        width: 70%;
+    }
+
+    /* responsiv for hobbies */
+    .hob-container{
+        width: 50%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr;
+    }
+    /* responsive for contact */
+    form input{
+        width: 100%;
+        margin-bottom: 15px ;
+    }
+    form .two input[type='text'], form .two input[type='submit'], form .two input[type='reset']{
+        width: 100%;
+        border-radius: 0%;
+    }
+    .two{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .form, .map{
+        width: 90%;
+    }
+    form{
+        margin: 20px auto;
+    }
+    iframe{
+        margin-bottom: 20px;
+    }
+
+    /* nav & footer */
+    nav h3, nav ul li, .bottom-nav ul li{
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+    nav, .bottom-nav ul li a{
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    nav ul, .bottom-nav ul{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .bottom-nav{
+        width: 50%;
+    }
+    .footer_icon{
+        margin-top: 15px;
+    }
+    .footer_icon ul li a{
+        padding: 0 5px;
+    }
+    .footer_icon ul li a i{
+        font-size: 20px;
+    }
+    .foot_container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .foot_container .left, .foot_container .right{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+    /* responsive for resume */
+    .re-profile{
+        width: 80%;
+    }
+    .cv-header img{
+        width: 25%;
+    }
+    .one .cv-col{
+        width: 48%;
+    }
+    .cv-col{
+        width: 100%;
+    }
+    .download-button{
+        width: 50%;
+    }
+    /* responsiv for projects */
+    .pro-container{
+        width: 90%;
+    }
+    /* responsiv for hobbies */
+    .hob-container{
+        width: 60%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 1fr;
+    }
+
+    /* responsive for contact */
+    .form, .map, .bottom-nav{
+        width: 80%;
+    }
+    .form{
+        margin: 20px auto;
+    }
+    iframe{
+        margin-bottom: 20px;
+    }
+
+    /* nav & footer */
+    nav{
+        font-size: 18px;
+        padding: 15px;
+    }
+    nav h3, nav ul li a{
+        padding: 0 5px 0 5px;
+    }
+    .bottom-nav ul li a{
+        padding: 0 10px 0 10px;
+    }
+    .footer_icon{
+        margin-top: 15px;
+    }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+    /* responsive for resume */
+    .re-profile{
+        width: 85%;
+    }
+    .cv-header img{
+        width: 20%;
+    }
+    .cv-col{
+        width: 40%;
+    }
+    .download-button{
+        width: 50%;
+    }
+    /* responsiv for projects */
+    .pro-container{
+        width: 80%;
+    }
+    .pro-head{
+        width: 40%;
+    }
+    .pro-body{
+        width: 45%;
+    }
+    /* responsiv for hobbies */
+    .hob-container{
+        width: 70%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 1fr;
+    }
+
+    /* responsive for contact */
+    .form, .map, .bottom-nav{
+        width: 70%;
+    }
+
+    /* nav & footer */
+    nav{
+        font-size: 21px;
+    }
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+    .bottom-nav{
+        width: 50%;
+    }
 }
