--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ h3, ul li a{
     cursor: pointer;
 }
 /* home */
+.home{
+    color: blue;
+}
 #home-body{
     background-image: url('../pictures/bg.jpg');
     background-repeat: no-repeat;
@@ -178,7 +181,7 @@ h3, ul li a{
     padding: 50px 0 30px 0;
 }
 .pro-item{
-    height: 35vh;
+    height: auto;
     margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
@@ -216,11 +219,8 @@ h3, ul li a{
     padding: 50px;
     width: 75%;
     margin: auto;
-}
-.hob-container{
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 1fr;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
 }
@@ -230,6 +230,7 @@ h3, ul li a{
     cursor: pointer;
 }
 .col{
+    height: auto;
     background: rgba(128, 128, 128, 0.103);
     padding: 20px;
     color: #000;
@@ -434,7 +435,7 @@ footer{
         flex-wrap: wrap;
     }
     .bottom-nav{
-        width: 50%;
+        width: 30%;
     }
     .footer_icon{
         margin-top: 15px;
