--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ form h3, input{
     box-sizing: border-box;
 }
 input[type="submit"], input[type="reset"]{
-    border-radius: 50%;
+    border-radius: 15px;
     box-shadow: 5px 5px 5px rgb(128, 128, 243);
     cursor: pointer;
 }
@@ -388,7 +388,7 @@ footer{
 
     /* responsiv for projects */
     .pro-container{
-        width: 100%;
+        width: 90%;
     }
     /* responsiv for hobbies */
     .hob-container{
@@ -409,12 +409,6 @@ footer{
     }
     .form, .map{
         width: 90%;
-    }
-    form{
-        margin: 20px auto;
-    }
-    iframe{
-        margin-bottom: 20px;
     }
 
     /* nav & footer */
@@ -474,25 +468,18 @@ footer{
     }
     /* responsiv for projects */
     .pro-container{
-        width: 90%;
+        width: 85%;
     }
     /* responsiv for hobbies */
     .hob-container{
         width: 60%;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-auto-rows: 1fr;
     }
 
     /* responsive for contact */
     .form, .map, .bottom-nav{
         width: 80%;
-    }
-    .form{
-        margin: 20px auto;
-    }
-    iframe{
-        margin-bottom: 20px;
     }
 
     /* nav & footer */
@@ -539,7 +526,6 @@ footer{
         width: 70%;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-auto-rows: 1fr;
     }
 
     /* responsive for contact */
